# BrickBreak

./: .gitignore  CMakeLists.txt  README.md
BrickBreak/levels/: level1.lvl
BrickBreak/shader/: batch_frag.glsl  batch_vert.glsl  frag.glsl  particle_frag.glsl  particle_vert.glsl  vert.glsl
BrickBreak/src/: Ball.cpp  Ball.h  BatchRenderer.cpp  BatchRenderer.h  Collision.cpp  Collision.h  Game.cpp  Game.h  Level.cpp  Level.h  Main.cpp  Object.cpp  Object.h  Particle.cpp  Particle.h  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Window.cpp  Window.h
BrickBreak/src/stb/: stb_image.h
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
